--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "https://USFSLK.github.io/portfolio",
+    "homepage": "https://usfslk.github.io",
     "name": "usfslk",
     "version": "0.1.0",
     "private": true,
